[tool.poetry]
name = "project"
version = "0.0.0"
description = "This is a package based on pybacktestchain with new functionalities!"
authors = ["Rosalie Dechance"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
